implement k anonymization